--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,7 @@
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<title>Good Title</title>
 	</head>
 	<body>
